ENH: Added convenient function LogToFile to launch.tcl
This function allow to log any string to a file named launcher-log.txt
Could be very useful while debugging the launcher.

git-svn-id: http://svn.slicer.org/Slicer3/trunk@13475 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/launch.tcl.in
+++ b/launch.tcl.in
@@ -35,6 +35,20 @@ set ::EXIT_CODE_GENERIC_ERROR -1
 set ::EXIT_CODE_VTK_ERROR -2
 set ::EXIT_CODE_LAUNCHING_ERROR -3
 
+
+#-------------------------------------------------------------------------------
+# .PROC LogToFile
+# Helper function.
+# Use this function to write a string to launcher-log.txt
+# .ARGS
+# message to be logged
+# .END
+#-------------------------------------------------------------------------------
+proc LogToFile { msg } {
+  set fd [open "launcher-log.txt" "w"]
+  puts $fd $msg
+}
+
 #-------------------------------------------------------------------------------
 # .PROC ShowAndLogError
 # Helper function.
