BUG: Fix CTK path in launcher.tcl.in
Since CTK is also build as a "superbuild", make sure that the inner
directory is also appended.

git-svn-id: http://svn.slicer.org/Slicer3/trunk@13476 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/launch.tcl.in
+++ b/launch.tcl.in
@@ -308,7 +308,7 @@ proc launch_SetEnvironment {} {
           if { [file exists "@VTK_DIR@/bin/$buildType/vtk.exe"] } {
             set ::VTK_BUILD_SUBDIR $buildType
           }
-          if { [file exists "@CTK_DIR@/bin/$buildType/CTKCore.dll"] } {
+          if { [file exists "@CTK_DIR@/CTK-build/bin/$buildType/CTKCore.dll"] } {
             set ::CTK_BUILD_SUBDIR $buildType
           }
           if { [file exists "@KWWidgets_DIR@/bin/$buildType/KWWidgets.dll"] } {
