COMP: Fix Application/CLI/Java/CMakeLists.txt to work with CMake < 2.8.1
git-svn-id: http://svn.slicer.org/Slicer3/trunk@13493 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Applications/CLI/Java/CMakeLists.txt
+++ b/Applications/CLI/Java/CMakeLists.txt
@@ -1,5 +1,12 @@
 FIND_PACKAGE ( Java )
 
+# Since not all dashboard are running cmake 2.8.1, let's set the legacy variable
+IF("${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERSION}.${CMAKE_PATCH_VERSION}" VERSION_LESS "2.8.1")
+  SET(Java_JAVA_EXECUTABLE ${JAVA_RUNTIME})
+  SET(Java_JAVAC_EXECUTABLE ${JAVA_COMPILE})
+  SET(Java_JAR_EXECUTABLE ${JAVA_ARCHIVE})
+ENDIF()
+
 IF(NOT Java_JAVAC_EXECUTABLE)
   MESSAGE(STATUS "Skipping installation of CLI/Application/Java - Set Java_JAVAC_EXECUTABLE variable to fix the problem")
   RETURN()
