COMP: Fix QTCore/Testing/CMakeLists.txt - QTcore_TESTS was used instead of KIT_TESTS
git-svn-id: http://svn.slicer.org/Slicer3/trunk@13497 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Base/QTCore/Testing/CMakeLists.txt
+++ b/Base/QTCore/Testing/CMakeLists.txt
@@ -32,12 +32,12 @@ ENDMACRO( SIMPLE_TEST  )
 
 ADD_TEST( qSlicerCoreApplicationTest1 
   ${LAUNCH_EXE}
-  ${QTCore_TESTS} qSlicerCoreApplicationTest1 
+  ${KIT_TESTS} qSlicerCoreApplicationTest1 
   ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/SlicerQT )
 
 ADD_TEST( qSlicerCoreIOManagerTest1 
   ${LAUNCH_EXE}
-  ${QTCore_TESTS} qSlicerCoreIOManagerTest1 
+  ${KIT_TESTS} qSlicerCoreIOManagerTest1 
   ${CMAKE_SOURCE_DIR}/Libs/MRML/Testing/name.mrml)
 
 SIMPLE_TEST( qSlicerLoadableModuleFactoryTest1 )
