ENH:  Many code cleanups and simplificaitons to make the maintenance much easier over time.  Added requested features.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@13498 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Applications/CLI/BRAINSTools/BRAINSCommonLib/CMakeLists.txt
+++ b/Applications/CLI/BRAINSTools/BRAINSCommonLib/CMakeLists.txt
@@ -76,9 +76,7 @@ endif (Slicer3_SOURCE_DIR)
 
 ##HACK NEED BETTER TESTS add_directory( TestLargestForegroundFilledMaskImageFilter )
 ##HACK NEED BETTER TESTSadd_directory( Test_FindCenterOfBrainFilter )
-
-add_executable(PrettyPrintTableTest PrettyPrintTableTest.cxx)
-set_target_properties(PrettyPrintTableTest
-  PROPERTIES RUNTIME_OUTPUT_DIRECTORY
-  ${BRAINSCommonLibProject_BINARY_DIR})
+if(BUILD_TESTING)
+  add_subdirectory(TestSuite)
+endif(BUILD_TESTING)
 
