COMP: Superbuild - Move the setting of vtk_PYTHON_ARGS from External_Python26.cmake to External_VTK.cmake
When configuring Slicer, now use directly:
  -DPYTHON_INCLUDE_PATH:PATH=${slicer_PYTHON_INCLUDE}
  -DPYTHON_LIBRARY:FILEPATH=${slicer_PYTHON_LIBRARY}

instead of vtk_PYTHON_ARGS

git-svn-id: http://svn.slicer.org/Slicer3/trunk@13528 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/SuperBuild/CMakeLists.txt
+++ b/SuperBuild/CMakeLists.txt
@@ -344,8 +344,9 @@ ExternalProject_Add(${proj}
     -DSlicer3_USE_PYTHON:BOOL=${Slicer3_USE_PYTHON}
     -DSlicer3_USE_SYSTEM_PYTHON:BOOL=OFF
     -DSlicer3_USE_NUMPY:BOOL=${Slicer3_BUILD_NUMPY}
-    ${vtk_PYTHON_ARGS}
     -DPYTHON_EXECUTABLE:FILEPATH=${slicer_PYTHON_EXECUTABLE}
+    -DPYTHON_INCLUDE_PATH:PATH=${slicer_PYTHON_INCLUDE}
+    -DPYTHON_LIBRARY:FILEPATH=${slicer_PYTHON_LIBRARY}
     -DSlicer3_USE_QT:BOOL=${Slicer3_USE_QT}
     ${slicer_QT_ARGS}
     -DSlicer3_USE_KWWIDGETS:BOOL=${Slicer3_USE_KWWIDGETS}
