COMP: Superbuild - Added code to dump external project dependencies into a file
The file ExternalProjectDependencies.txt will now be created and contain
the external project dependencies as described below:

proj1:
proj2:
proj3: proj1;proj2
proj4:proj1

git-svn-id: http://svn.slicer.org/Slicer3/trunk@13531 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/SuperBuild/CMakeLists.txt
+++ b/SuperBuild/CMakeLists.txt
@@ -329,6 +329,15 @@ if(Slicer3_USE_PYTHON)
   list(APPEND slicer_DEPENDENCIES python)
 endif(Slicer3_USE_PYTHON)
 
+#-----------------------------------------------------------------------------
+# Dump external project dependencies
+#------------------------------------------------------------------------------
+
+set(ep_dependency_graph "# External project dependencies")
+foreach(ep tk incrTcl iwidgets blt python blas lapack numpy scipy vtk CTK KWWidgets Insight BatchMake OpenIGTLink teem cmcurl slicer)
+  set(ep_dependency_graph "${ep_dependency_graph}\n${ep}:${${ep}_DEPENDENCIES}")
+endforeach()
+file(WRITE ${CMAKE_CURRENT_BINARY_DIR}/ExternalProjectDependencies.txt "${ep_dependency_graph}\n")
 
 #-----------------------------------------------------------------------------
 # Configure and build Slicer
