ENH: print warning and continue if launching an external program in a directory that does not include a bin/Slicer3-real executable
git-svn-id: http://svn.slicer.org/Slicer3/trunk@13536 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/launch.tcl.in
+++ b/launch.tcl.in
@@ -1058,6 +1058,11 @@ proc launch_ImportModulePaths {} {
 
     set ::globallines ""  ; # reset buffer for global lines
 
+    if { ![info exists ::Slicer3_REAL] || ![file exists $::Slicer3_REAL] } {
+      puts "No Slicer3-real executable, so not adding module paths"
+      return
+    }
+
     # run the program with argument --print-module-paths
     if {$::env(BUILD) == $::WINDOWS} {
         set fp [open "| \"$::Slicer3_REAL\" --print-module-paths" r]
