COMP: Superbuild - Python dependencies are now all set in CMakeLists.txt
git-svn-id: http://svn.slicer.org/Slicer3/trunk@13556 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/SuperBuild/CMakeLists.txt
+++ b/SuperBuild/CMakeLists.txt
@@ -304,7 +304,11 @@ set(iwidgets_DEPENDENCIES tcl itcl)
 set(blt_DEPENDENCIES tcl tk)
 set(python_DEPENDENCIES)
 if(Slicer3_USE_KWWIDGETS)
-  set(python_DEPENDENCIES tcl)
+  if(WIN32)
+    set(python_DEPENDENCIES tcl)
+  else()
+    set(python_DEPENDENCIES tk)
+  endif()
 endif()
 set(blas_DEPENDENCIES)
 set(lapack_DEPENDENCIES)
