COMP: Superbuild - External_NUMPY - Reorganize code
git-svn-id: http://svn.slicer.org/Slicer3/trunk@13561 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/SuperBuild/NUMPY_make_step.cmake.in
+++ b/SuperBuild/NUMPY_make_step.cmake.in
@@ -8,4 +8,4 @@ execute_process(
 if(NOT ${res} EQUAL 0)
   message(FATAL_ERROR "Error in config of numpy")
 endif()
-message("Numpy config worked.")
+message("Numpy build worked.")
