COMP: Superbuild - Updated CTEST_CUSTOM_WARNING_EXCEPTION and removed auto-generated list of exception
Exception shouldn't be auto-generated. These ones should be added case
by case and widely documented.

git-svn-id: http://svn.slicer.org/Slicer3/trunk@13567 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/CTestCustom.cmake.in
+++ b/CTestCustom.cmake.in
@@ -53,6 +53,7 @@ SET(CTEST_CUSTOM_WARNING_EXCEPTION
   "VTK.*Utilities.vtkexodus2"
   "VTK.*Utilities.vtklibproj"
   "VTK.*Utilities.vtksqlite"
+  "VTK.*Utilities.VPIC.*cxx"
   "VTK.*warn_unused_result"
   "VTK.*Filtering.*cxx"
   "VTK.*IO.*cxx"
@@ -72,6 +73,7 @@ SET(CTEST_CUSTOM_WARNING_EXCEPTION
 
   # Libs/tclap
   "tclap.include.tclap.*Arg.h.*warning C4512.*"
+  
 
   # Python suppressions
   # About redefinition of symbols
