--- a/SuperBuild/CTestCustom.cmake.in
+++ b/SuperBuild/CTestCustom.cmake.in
@@ -65,9 +65,10 @@ SET(CTEST_CUSTOM_WARNING_EXCEPTION
   ".*warning: "GL_GLEXT_LEGACY" redefined"
   
   # ITK suppressions
-  "Utilities.gdcm"
-  "Utilities.vxl"
-  "Insight.Code.Common"
+  "[Uu]tilities.gdcm"
+  "[Uu]tilities.vxl"
+  "[Ii]nsight.[Cc]ode.[Cc]ommon"
+  "[Ii]nsight.[Cc]ode.[Nn]umerics"
 
   # VTK suppressions
   "vtkfreetype"
@@ -95,6 +96,7 @@ SET(CTEST_CUSTOM_WARNING_EXCEPTION
 
   # curl suppressions
   "cmcurl.*warning.*conditional expression is constant"
+  "cmcurl."warning.*conversion from.*possible loss of data"
   
   # Visual studio spurious warnings...
   "The following environment variables were not found"
